// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RedeemInvite renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "height": 35,
        "paddingRight": 10,
        "paddingTop": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 70,
        "zIndex": 100,
      }
    }
  >
    <Text
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
         
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 10,
        "paddingHorizontal": 20,
      }
    }
    keyboardShouldPersistTaps="always"
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "marginBottom": 25,
              "marginTop": 25,
            },
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../src/images/coins-logo.png",
            }
          }
          style={
            Object {
              "height": 50,
              "width": 50,
            }
          }
        />
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-Light",
                "fontSize": 22,
                "paddingBottom": 20,
                "textAlign": "center",
              },
              Object {
                "color": "#2E3338",
                "textAlign": "center",
              },
            ]
          }
          testID="InviteWallTitle"
        >
           
          welcomeCelo
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 16,
                "lineHeight": 24,
              },
              Object {
                "color": "#2E3338",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "paddingBottom": 15,
                "paddingLeft": 10,
              },
            ]
          }
        >
          inviteText.0
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 16,
                "lineHeight": 24,
              },
              Object {
                "color": "#2E3338",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "paddingBottom": 15,
                "paddingLeft": 10,
              },
            ]
          }
        >
          inviteText.1
          <Text
            onPress={[Function]}
            style={
              Object {
                "color": "#1AB775",
                "fontFamily": "Hind-Medium",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            inviteText.2
          </Text>
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-Regular",
                "fontSize": 13,
                "lineHeight": 18,
              },
              Object {
                "color": "#2E3338",
                "textAlign": "center",
              },
            ]
          }
        >
          enterFullName
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderColor": "#D1D5D8",
              "borderRadius": 3,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 62,
              "marginVertical": 5,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                Object {
                  "color": "#555",
                  "flex": 1,
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "marginLeft": 10,
                },
              ]
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCorrect={true}
              autoFocus={false}
              enablesReturnKeyAutomatically={true}
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="fullName"
              placeholderTextColor="#D1D5D8"
              rejectResponderTermination={true}
              secureTextEntry={false}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "borderColor": "#D1D5D8",
                    "borderRadius": 3,
                    "padding": 8,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                  },
                ]
              }
              testID="NameEntry"
              textContentType="none"
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderColor": "#D1D5D8",
                "borderRadius": 3,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 62,
                "marginVertical": 5,
              },
              Object {
                "borderColor": "#D1D5D8",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                Object {
                  "color": "#555",
                  "flex": 1,
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "marginLeft": 10,
                },
              ]
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCorrect={true}
              autoFocus={false}
              enablesReturnKeyAutomatically={true}
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="InvitationCode"
              placeholderTextColor="#D1D5D8"
              rejectResponderTermination={true}
              secureTextEntry={false}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "borderColor": "#D1D5D8",
                    "borderRadius": 3,
                    "padding": 8,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                  },
                ]
              }
              testID="InviteCodeEntry"
              textContentType="none"
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
          },
          Object {
            "alignSelf": "center",
            "fontSize": 12,
            "fontWeight": "300",
            "marginBottom": 5,
            "marginTop": 10,
            "textAlign": "center",
            "width": 320,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Bold",
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "alignSelf": "center",
              "fontSize": 12,
              "fontWeight": "300",
              "marginBottom": 5,
              "marginTop": 10,
              "textAlign": "center",
              "width": 320,
            },
          ]
        }
      >
        inviteText.askForInvite.0
      </Text>
      inviteText.askForInvite.1
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Bold",
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "color": "#42D689",
              "fontFamily": "Hind-SemiBold",
            },
            Object {
              "alignSelf": "center",
              "fontSize": 12,
              "fontWeight": "300",
              "marginBottom": 5,
              "marginTop": 10,
              "textAlign": "center",
              "width": 320,
            },
          ]
        }
      >
        inviteText.askForInvite.2
      </Text>
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          null,
          null,
          undefined,
          Object {
            "backgroundColor": "#A3EBC6",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#A3EBC6",
            "borderWidth": 0,
            "flex": 1,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="RedeemInviteButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            optIn
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginVertical": 17,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#81868B",
              "fontFamily": "Hind-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            Object {
              "color": "#2E3338",
            },
          ]
        }
      >
        haveWallet
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="ImportExistingUsingBackupKey"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-Regular",
                "fontSize": 13,
                "lineHeight": 18,
              },
              Object {
                "color": "#42D689",
                "fontFamily": "Hind-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              Array [
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 13,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-SemiBold",
                },
              ],
            ]
          }
        >
          importIt
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RedeemInvite renders with an error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "space-between",
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "height": 35,
        "paddingRight": 10,
        "paddingTop": 10,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 70,
        "zIndex": 100,
      }
    }
  >
    <Text
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
         
    </Text>
  </View>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 10,
        "paddingHorizontal": 20,
      }
    }
    keyboardShouldPersistTaps="always"
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "marginBottom": 25,
              "marginTop": 25,
            },
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../src/images/coins-logo.png",
            }
          }
          style={
            Object {
              "height": 50,
              "width": 50,
            }
          }
        />
      </View>
      <View>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Hind-Light",
                "fontSize": 22,
                "paddingBottom": 20,
                "textAlign": "center",
              },
              Object {
                "color": "#2E3338",
                "textAlign": "center",
              },
            ]
          }
          testID="InviteWallTitle"
        >
           
          welcomeCelo
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 16,
                "lineHeight": 24,
              },
              Object {
                "color": "#2E3338",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "paddingBottom": 15,
                "paddingLeft": 10,
              },
            ]
          }
        >
          inviteText.0
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Hind-Regular",
                "fontSize": 16,
                "lineHeight": 24,
              },
              Object {
                "color": "#2E3338",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "paddingBottom": 15,
                "paddingLeft": 10,
              },
            ]
          }
        >
          inviteText.1
          <Text
            onPress={[Function]}
            style={
              Object {
                "color": "#1AB775",
                "fontFamily": "Hind-Medium",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
          >
            inviteText.2
          </Text>
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-Regular",
                "fontSize": 13,
                "lineHeight": 18,
              },
              Object {
                "color": "#2E3338",
                "textAlign": "center",
              },
            ]
          }
        >
          enterFullName
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderColor": "#D1D5D8",
              "borderRadius": 3,
              "borderWidth": 1,
              "flexDirection": "row",
              "height": 62,
              "marginVertical": 5,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                Object {
                  "color": "#555",
                  "flex": 1,
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "marginLeft": 10,
                },
              ]
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCorrect={true}
              autoFocus={false}
              enablesReturnKeyAutomatically={true}
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="fullName"
              placeholderTextColor="#D1D5D8"
              rejectResponderTermination={true}
              secureTextEntry={false}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "borderColor": "#D1D5D8",
                    "borderRadius": 3,
                    "padding": 8,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                  },
                ]
              }
              testID="NameEntry"
              textContentType="none"
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderColor": "#D1D5D8",
                "borderRadius": 3,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 62,
                "marginVertical": 5,
              },
              Object {
                "borderColor": "#FF0000",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                Object {
                  "color": "#555",
                  "flex": 1,
                  "fontFamily": "Hind-Regular",
                  "fontSize": 16,
                  "marginLeft": 10,
                },
              ]
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCorrect={true}
              autoFocus={false}
              enablesReturnKeyAutomatically={true}
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              onSubmitEditing={[Function]}
              placeholder="InvitationCode"
              placeholderTextColor="#D1D5D8"
              rejectResponderTermination={true}
              secureTextEntry={false}
              style={
                Array [
                  Object {
                    "fontFamily": "Hind-Regular",
                  },
                  Object {
                    "borderColor": "#D1D5D8",
                    "borderRadius": 3,
                    "padding": 8,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                  },
                ]
              }
              testID="InviteCodeEntry"
              textContentType="none"
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
          },
          Object {
            "alignSelf": "center",
            "fontSize": 12,
            "fontWeight": "300",
            "marginBottom": 5,
            "marginTop": 10,
            "textAlign": "center",
            "width": 320,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Bold",
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "alignSelf": "center",
              "fontSize": 12,
              "fontWeight": "300",
              "marginBottom": 5,
              "marginTop": 10,
              "textAlign": "center",
              "width": 320,
            },
          ]
        }
      >
        inviteText.askForInvite.0
      </Text>
      inviteText.askForInvite.1
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Hind-Bold",
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "color": "#42D689",
              "fontFamily": "Hind-SemiBold",
            },
            Object {
              "alignSelf": "center",
              "fontSize": 12,
              "fontWeight": "300",
              "marginBottom": 5,
              "marginTop": 10,
              "textAlign": "center",
              "width": 320,
            },
          ]
        }
      >
        inviteText.askForInvite.2
      </Text>
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 3,
            "flexDirection": "row",
          },
          null,
          null,
          undefined,
          Object {
            "backgroundColor": "#A3EBC6",
          },
        ]
      }
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#A3EBC6",
            "borderWidth": 0,
            "flex": 1,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="RedeemInviteButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Hind-SemiBold",
                  "fontSize": 16,
                },
                Object {
                  "color": "#FFFFFF",
                },
                Object {
                  "paddingLeft": 5,
                  "paddingRight": 5,
                },
              ]
            }
          >
            optIn
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginVertical": 17,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#81868B",
              "fontFamily": "Hind-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            },
            Object {
              "color": "#2E3338",
            },
          ]
        }
      >
        haveWallet
      </Text>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="ImportExistingUsingBackupKey"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#81868B",
                "fontFamily": "Hind-Regular",
                "fontSize": 13,
                "lineHeight": 18,
              },
              Object {
                "color": "#42D689",
                "fontFamily": "Hind-Medium",
                "fontSize": 14,
                "lineHeight": 18,
              },
              Array [
                Object {
                  "color": "#81868B",
                  "fontFamily": "Hind-Regular",
                  "fontSize": 13,
                  "lineHeight": 18,
                },
                Object {
                  "color": "#42D689",
                  "fontFamily": "Hind-SemiBold",
                },
              ],
            ]
          }
        >
          importIt
        </Text>
      </View>
    </View>
  </View>
</View>
`;
